--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -5,7 +5,62 @@ services:
     image: azuracast_cli:latest
     build:
       context: ./util/docker/testing
-    environment:
+    depends_on:
+      - mariadb
+      - influxdb
+      - stations
+      - redis
+    env_file: azuracast.env
+    environment: &default-environment
+      AZURACAST_DC_REVISION: 5
       APPLICATION_ENV: "testing"
     volumes:
-      - .:/var/azuracast/www
+      - .:/var/azuracast/www/app
+      - tmp_data:/var/azuracast/www_tmp
+      - station_data:/var/azuracast/stations
+      - shoutcast2_install:/var/azuracast/servers/shoutcast2
+    restart: always
+    logging: &default-logging
+      options:
+        max-size: "1m"
+        max-file: "5"
+
+  mariadb:
+    image: azuracast/azuracast_db:latest
+    volumes:
+      - db_data:/var/lib/mysql
+    env_file: azuracast.env
+    environment:
+      <<: *default-environment
+    restart: always
+    logging: *default-logging
+
+  influxdb:
+    image: azuracast/azuracast_influxdb:latest
+    volumes:
+      - influx_data:/var/lib/influxdb
+    restart: always
+    logging: *default-logging
+
+  redis:
+    image: azuracast/azuracast_redis:latest
+    restart: always
+    logging: *default-logging
+
+  stations:
+    container_name: azuracast_stations
+    image: azuracast/azuracast_radio:latest
+    volumes:
+      - station_data:/var/azuracast/stations
+      - shoutcast2_install:/var/azuracast/servers/shoutcast2
+      - letsencrypt:/etc/nginx/ssl:ro
+    init: true
+    restart: always
+    logging: *default-logging
+
+volumes:
+  db_data: {}
+  influx_data: {}
+  shoutcast2_install: {}
+  station_data: {}
+  tmp_data: {}
